--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,11 @@
-<h1>Sample App</h1>
-<p>
-Find me in app/views/static_pages/home.html.erb<br />
-<a href="http://blog.51osos.com/">Linux News</a>
-</p>
+<div class="center hero-unit">
+<h1>Welcome to the Linux News</h1>
+<h2>
+	This is the home page for the 
+	<a href="http://blog.51osos.com/">Linux News</a>.
+</h2>
+
+<%= link_to "Sign up now!", "#", class: "btn btn-large btn-primary" %>
+</div>
+
+<%= link_to image_tag("rails.png", alt: "Rails"), 'http://blog.51osos.com' %>
