--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -16,7 +16,7 @@
 			<%= f.label :password_confirmation, "Confirmation" %>
 			<%= f.password_field :password_confirmation %>
 
-			<%= f.submit "Create my account", class: "btn btn-large btn-success" %>
+			<%= f.submit "Create my account", class: "btn btn-small btn-primary" %>
 		<% end %>
 	</div>
 </div>
