--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,18 +54,14 @@ p {
 
 #logo {
 	float: left;
-	color: $red;
+  color: $white;
 	font-size: 1.7em;
 	font-weight: bold;
-	font-family: "Lobster";
 	letter-spacing: -1px;
-	//text-transform: uppercase;
-  padding-top: 5px;
-  padding-bottom: 5px;
   margin-right: 10px;
-  line-height: 1.7;
+  margin-top: 10px;
   &:hover {
-	text-decoration: none;
+    text-decoration: none;
   }
 }
 
@@ -77,7 +73,6 @@ p {
 	font-weight: bold;
 	font-family: "Helvetica";
 	padding: 10px;
-	line-height: 1.7;
 	margin-left: 500px;
 	border-left: 1px solid $gray;
 	border-right: 1px solid $gray;
