--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -182,3 +182,30 @@ input, textarea, select, .uneditable-input {
     }
   }
 }
+
+/*microposts*/
+.microposts {
+  list-style: none;
+  margin: 10px 0 0 0;
+
+  li {
+    padding: 10px 0;
+    border-top: 1px solid #e8e8e8;
+    font-weight: normal;
+    font-size: 16px;
+  }
+
+  .content {
+    display: block;
+  }
+
+  .timestamp {
+    color: $grayLight;
+    font-size: 14px;
+  }
+  .gravatar {
+    float: left;
+    margin-right: 10px;
+  }
+}
+
