--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -142,11 +142,40 @@ aside {
 	}
 }
 
+.stats {
+  overflow: auto;
+  a {
+    float: left;
+    padding: 0 10px;
+    color: gray;
+    border-left: 1px solid $grayLighter;
+    &:first-child {
+      padding-left: 0;
+      border: 0;
+    }
+    &:hover {
+      text-decoration: none;
+      color: $blue;
+    }
+  }
+  strong {
+    display: block;
+  }
+
+
+}
 .gravatar {
 	float: left;
 	margin-right: 10px;
 }
 
+.user_avatars {
+  margin-top: 10px;
+  overflow: auto;
+  .gravatar {
+    margin: 1px 1px;
+  }
+}
 /* form */
 input, textarea, select, .uneditable-input {
 	width: 100%;
