--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,9 @@
+$navbarBackground: #222;
+$navbarBackgroundHighlight: #333;
+$navbarText: #46a546;
+$navbarLinkColor: #46a546;
+$navbarLinkHover: #fff;
+
 @import "bootstrap";
 /* mixins, variables, etc. */
 $grayMediumLight: #eaeaea;
@@ -27,6 +33,7 @@ textarea {
   }
 }
 
+
 /* typography */
 h1, h2, h3, h4, h5, h6 {
 	line-height: 1;
@@ -54,7 +61,7 @@ p {
 
 #logo {
 	float: left;
-  color: $white;
+  color: #46a546;
 	font-size: 1.7em;
 	font-weight: bold;
 	letter-spacing: -1px;
@@ -65,7 +72,9 @@ p {
   }
 }
 
-
+.navbar-inverse {
+   background-color: #000;
+}
 /* footer */
 footer {
 	color: $grayLight;
